--- a/service-playtech.yml
+++ b/service-playtech.yml
@@ -3,7 +3,8 @@ kind: Service
 metadata:
   name: playtech
 spec: 
-  type: NodePort 
+  selector:
+    app: playtech
   ports:
   - name: http
     port: 80
